@@ -3,6 +3,7 @@ if test -e "self_architecture.cfu1"; then
     echo "self_architecture.cfu1 exists"
     if test -e "self_architecture.json"; then
         echo "self_architecture.json is deleted..."
+        sleep 5
         rm "self_architecture.json"
     fi
     if ! crystal-facet-uml -e self_architecture.cfu1 json . ; then
