@@ -1,0 +1,13 @@
+[binaries]
+exe_wrapper = 'wine'
+
+[properties]
+sys_root = 'my_usr'
+pkg_config_libdir = 'my_usr/lib/pkgconfig'
+needs_exe_wrapper = true
+
+[host_machine]
+system = 'windows'
+cpu_family = 'x86_64'
+cpu = 'w64'
+endian = 'little'
