@@ -2,6 +2,7 @@ crystal-facet-uml (1.35.1) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * During import, changed ids and classifier-names are reported on stdout
+  * The json export contains some more information to improve readability
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 09 Jan 2022 16:00:00 +0200
 
